# machina_labs_robotic_hw

./: README.md
robotic_hw/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotic_hw/include/: load_cell_data_publisher.hpp
robotic_hw/launch/: simulator.launch.py  two_sensors.launch.py  two_sensors_simulated.launch.py
robotic_hw/robotic_hw/: load_cell_data_publisher.py  load_cell_data_server.py
robotic_hw/scripts/: sensor.py
robotic_hw/src/: load_cell_data_publisher.cpp
robotic_hw_interfaces/: CMakeLists.txt  package.xml
robotic_hw_interfaces/msg/: LoadCellData.msg  LoadCellDataArray.msg
robotic_hw_interfaces/srv/: GetLoadCellData.srv
